Use ArrayList instead of LinkedList